Filled in the remaining pages.
Needs proof reading and another eye on the design

--- a/styles.css
+++ b/styles.css
@@ -89,3 +89,9 @@ ul li {
     margin-left: 5em;
     font-family: 'Open Sans', 'sans';
 }
+
+ol li {
+    margin-left: 5em;
+    font-family: 'Open Sans', 'sans';
+    padding-bottom:0.5em;
+}
